gnd_gnd_id set to unique

--- a/example/templates/example/create_person.html
+++ b/example/templates/example/create_person.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Example Project</h1>
+  <h1>Create a new Person</h1>
   <h2>GND-Autocomplete-Form</h2>
   <form action="" method="post">
     {{ form.as_p }}
