--- a/example/templates/example/home.html
+++ b/example/templates/example/home.html
@@ -18,7 +18,9 @@
 <div class="container">
     <div id="annotationcontent">
       <p>Labore eiusmod qui nulla velit sint. Sint quis culpa non quis ipsum. Aute quis do ad minim eu. Nulla veniam incididunt non commodo non duis sit cupidatat nisi. Commodo sint ullamco magna ad elit ut non do nulla est. Labore ullamco enim labore exercitation.</p>
-      <p>Pariatur amet aliquip esse officia culpa elit ipsum irure et. Ullamco officia Lorem mollit mollit dolore proident laborum non sunt anim amet consectetur. Est labore ea ullamco irure amet ex. Aliqua occaecat voluptate ea sit labore fugiat enim elit Lorem. Nisi cillum eiusmod duis sit cupidatat cupidatat magna fugiat consectetur tempor.</p>
+      <p>
+        <a href="{% url 'create' %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Create another GND Object</a>
+      </p>
     </div> 
 </div>
 {{ form.media }}
